# j4status-plugins

./: .gitignore  HACKING.md  Makefile.am  README.md  configure.ac  index.html
alsa/: alsa.mk
alsa/man/: j4status-alsa.conf.xml
alsa/src/: alsa.c
backlight/: backlight.mk
backlight/man/: j4status-backlight.conf.xml
backlight/src/: backlight.c
cpu/: cpu.mk
cpu/man/: j4status-cpu.conf.xml
cpu/src/: cpu.c
fsinfo/: fsinfo.mk
fsinfo/man/: j4status-fsinfo.conf.xml
fsinfo/src/: fsinfo.c
i3focus/: i3focus.mk
i3focus/man/: j4status-i3focus.conf.xml
i3focus/src/: i3focus.c
inotify/: inotify.mk
inotify/man/: j4status-inotify.conf.xml
inotify/src/: inotify.c
iw/: iw.mk
iw/man/: j4status-iw.conf.xml
iw/src/: iw.c
m4/: alsa.m4  backlight.m4  cpu.m4  fsinfo.m4  i3focus.m4  inotify.m4  iw.m4  mem.m4  mpris.m4  nl.m4  nm.m4
mem/: mem.mk
mem/man/: j4status-mem.conf.xml
mem/src/: mem.c
mpris/: .gitignore  j4status-mpris.conf.xml  mpris.mk
mpris/man/: j4status-mpris.conf.xml
mpris/src/: mpris.c
nl/: nl.mk
nl/src/: nl.c
nm/: nm.mk
nm/man/: j4status-nm.conf.xml
nm/src/: nm.c
src/: .gitignore  config.dtd.in  config.ent.in  man.mk
